# CFD2.1

./: .project
.dist-buildwrapper/: CFD2.cabal
.dist-buildwrapper/src/: .CalculusUtils.hs.bwinfo  .CalculusUtils.hs.bwusage  .Main.hs.bwinfo  .Main.hs.bwusage  .SolutionDomain.hs.bwinfo  .SolutionDomain.hs.bwusage  CalculusUtils.hi  Main.hi  SolutionDomain.hi
old/: CalculusUtils.hs  SolutionDomain.hs
src/: CalculusUtils.hi  CalculusUtils.hs  Main.hi  Main.hs  SolutionDomain.hi  SolutionDomain.hs
