name:           CFD
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         Administrator

executable CFD
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4
  ghc-options:     -Wall
  other-modules:   
                   Main,
                   SolutionDomain,
                   CalculusUtils

library 
  build-depends:   
                   containers >=0.5 && <0.6,
                   unordered-containers >=0.2 && <0.3,
                   mtl >=2.1 && <2.2,
                   monad-par >=0.3 && <0.4,
                   gnuplot >=0.5 && <0.6,
                   random >=1.0 && <1.1,
                   array >=0.5 && <0.6,
                   random-shuffle >=0.0 && <0.1,
                   vector >=0.10 && <0.11,
                   deepseq >=1.3 && <1.4,
                   ghc-prim >=0.3 && <0.4
  hs-source-dirs:  src
  ghc-options:     -Wall
  other-modules:   
                   SolutionDomain,
                   CalculusUtils

